# EDEN

./: .gitignore  CLAUDE.md  EDEN_REPORT.md  INSTRUCTIONS.md  MANIFESTE.md  README.md  eden_benchmark.py  prompt.md  pyproject.toml  requirements.txt
eden/: __init__.py  config.py  config_loader.py  inference.py  interpret.py  logutil.py  metrics.py  sensitivity_morris.py  training.py
eden/benchmarks/: __init__.py  baselines.py  datasets.py  runner.py
eden/cli/: __init__.py  main.py  tui_app.py
eden/core/: __init__.py  apoptosis.py  differentiation.py  epigenome.py  genome.py  glia.py  maturity.py  morphogen.py  network.py  neurogenesis.py  stem.py
eden/optim/: __init__.py  eggroll_l1.py  eggroll_l2.py
examples/: inference_example.py  quickstart.py  train.example.yaml
scripts/: kaggle_ablation_v2.py  kaggle_cifar10.py  kaggle_cifar10_v2.py  kaggle_cifar10_v3.py  kaggle_cifar10_v4.py  kaggle_deploy_validation.py  kaggle_ecg_v1.py  kaggle_fashion_mnist.py  kaggle_latency.py  kaggle_validate_v2.py  run_full_validation.sh
tests/: test_ablation.py  test_checkpoint_resume.py  test_genome.py  test_integration.py  test_metrics.py  test_neurogenesis_growth.py  test_regression.py  test_sensitivity.py  test_stem.py
