[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eden-emergent"
version = "2.0.0"
description = "EDEN — Emergent Developmental Encoding Network: biologically-inspired PyTorch architecture"
readme = "README.md"
license = { text = "Research / Educational Use" }
authors = [{ name = "limack0" }]
keywords = ["deep-learning", "neural-network", "biological-development", "pytorch", "neuroevolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "click>=8.1",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.urls]
Homepage = "https://github.com/limack0/EDEN"
Repository = "https://github.com/limack0/EDEN"
"Bug Tracker" = "https://github.com/limack0/EDEN/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
vision = ["torchvision>=0.15"]
tui = ["textual>=0.47"]
neat = ["neat-python>=0.92"]
umap = ["umap-learn>=0.5", "scipy>=1.11"]
config = ["pyyaml>=6.0"]
profile = ["thop>=0.1.1"]

[project.scripts]
eden = "eden.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eden*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
